--- a/app/src/main/res/layout/calendar_day.xml
+++ b/app/src/main/res/layout/calendar_day.xml
@@ -9,26 +9,42 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:minHeight="120dp"
         android:orientation="vertical">
 
+        <!--Day of month-->
         <TextView
             android:id="@+id/exThreeDayText"
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
-            android:layout_margin="8dp"
             android:gravity="center"
+            android:minWidth="36dp"
+            android:minHeight="36dp"
+            android:padding="8dp"
             android:textColor="@color/black"
             android:textSize="16sp"
             tools:text="22" />
 
+        <!--Events -->
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/rv_events"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:nestedScrollingEnabled="false"
             app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
-            tools:listitem="@layout/item_appointment_client" />
+            tools:listitem="@layout/item_calendar_event" />
+
+        <!--Number of extra events of day-->
+        <TextView
+            android:id="@+id/txt_extra_events"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="2dp"
+            android:textColor="@color/black"
+            android:textStyle="bold"
+            android:visibility="gone"
+            tools:text="+2" />
 
     </LinearLayout>
 
